tests/NormalTests/paczka1/fuzzy1/33242267.err
Error in line 11: 4Xi4Y A937 17,0
Error in line 14: 4Xi4Y S603 10,4
Error in line 23: X5H S31} 2}6,4
Error in line 16: X5H S310 43,1
Error in line 26: 4Xi4Y S310 21,79
Error in line 9: grr S310 1,1
Error in line 37: 4Xi4Y S310 22,30
Error in line 39: grr A937 5,9
